--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -22,7 +22,10 @@
 <div class="container">
   <div class="cart_inner">
     {% if cart_items %}
+    <div>{{ cart_items }}</div>
+    
     <div class="table-responsive">
+      
       <table class="table">
         <thead>
           <tr>
@@ -49,7 +52,7 @@
             </td>
             <td>
               <div class="product_count">
-                <!-- <input type="text" value="1" min="0" max="10" title="Quantity:"
+                <input type="text" value="1" min="0" max="10" title="Quantity:"
                   class="input-text qty input-number" />
                 <button
                   class="increase input-number-increment items-count" type="button">
@@ -58,7 +61,7 @@
                 <button
                   class="reduced input-number-decrement items-count" type="button">
                   <i class="ti-angle-down"></i>
-                </button> -->
+                </button>
                 <span class="input-number-decrement"> <i class="ti-minus"></i></span>
                 <input class="input-number" type="text" value="1" min="0" max="10">
                 <span class="input-number-increment"> <i class="ti-plus"></i></span>
@@ -68,31 +71,7 @@
               <h5>$720.00</h5>
             </td>
           </tr>
-          <tr>
-            <td>
-              <div class="media">
-                <div class="d-flex">
-                  <img src="img/arrivel/arrivel_2.png" alt="" />
-                </div>
-                <div class="media-body">
-                  <p>Minimalistic shop for multipurpose use</p>
-                </div>
-              </div>
-            </td>
-            <td>
-              <h5>$360.00</h5>
-            </td>
-            <td>
-              <div class="product_count">
-                  <span class="input-number-decrement"> <i class="ti-minus"></i></span>
-                  <input class="input-number" type="text" value="1" min="0" max="10">
-                  <span class="input-number-increment"> <i class="ti-plus"></i></span>
-              </div>
-            </td>
-            <td>
-              <h5>$720.00</h5>
-            </td>
-          </tr>
+
           <tr class="bottom_button">
             <td>
               <a class="btn_1" href="#">Update Cart</a>
@@ -141,20 +120,6 @@
                     <input type="radio" aria-label="Radio button for following text input">
                   </li>
                 </ul>
-                <h6>
-                  Calculate Shipping
-                  <i class="fa fa-caret-down" aria-hidden="true"></i>
-                </h6>
-                <select class="shipping_select">
-                  <option value="1">Bangladesh</option>
-                  <option value="2">India</option>
-                  <option value="4">Pakistan</option>
-                </select>
-                <select class="shipping_select section_bg">
-                  <option value="1">Select a State</option>
-                  <option value="2">Select a State</option>
-                  <option value="4">Select a State</option>
-                </select>
                 <input class="post_code" type="text" placeholder="Postcode/Zipcode" />
                 <a class="btn_1" href="#">Update Details</a>
               </div>
