--- a/templates/base.html
+++ b/templates/base.html
@@ -127,9 +127,9 @@
                             <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_cart' %}">
                                 <i class="flaticon-shopping-cart-black-shape cart-sum"> 
                                     {% if grand_total %}
-                                        ${{ grand_total|floatformat:2 }}
+                                        € {{ grand_total|floatformat:2 }}
                                     {% else %}
-                                        $0.00
+                                        € 0.00
                                     {% endif %}
                                 </i>
                             </a>
