--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,7 @@
 .text-sold {
     text-transform: uppercase;
-    font-weight: 600;
-    font-size: xx-large;
+    font-weight: 500;
+    font-size: 2rem;
     
 }
 
@@ -63,6 +63,14 @@ hr {
 .remove-item,
 .pointer {
     cursor: pointer;
+}
+
+.column_centered {
+    text-align: center;
+}
+
+.column_right {
+    text-align: right;
 }
 
 /* Toasts container */
