--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -22,108 +22,101 @@
 
 <!--================ confirmation part start =================-->
 <section class="confirmation_part section_padding">
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="confirmation_tittle">
-        <span><h6>Your order has been received.</h6>
-        <p>A confirmation email will be sent to {{ order.email }}</p></span>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="confirmation_tittle">
+          <span>
+            <h6>Your order has been received.</h6>
+            <p>A confirmation email will be sent to {{ order.email }}</p>
+          </span>
+        </div>
       </div>
-    </div>
-    <div class="col-lg-6 col-lx-4">
-      <div class="single_confirmation_details">
-        <h4>Order Information</h4>
-        <ul>
-          <li>
-            <p><span class="checkout_success_span">Order Number:</span></p><span> {{ order.order_number }}</span>
-          </li>
-          <li>
-            <p>Order Date:</p><span> {{ order.date }}</span>
-          </li>
-          <li>
-            <p>Order Total:</p><span> €{{ order.order_total }}</span>
-          </li>
-          <li>
-            <p>Delivery:</p><span> €{{ order.delivery_cost }}</span>
-          </li>
-          <li>
-            <p>Grand Total:</p><span> €{{ order.grand_total }}</span>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-lg-6 col-lx-4">
-      <div class="single_confirmation_details">
-        <h4>Delivery Address</h4>
-        <ul>
-          <li>
-            <p>Name:</p><span> {{ order.full_name }}</span>
-          </li>
-          <li>
-            <p>Phone Number:</p><span> {{ order.phone_number }}</span>
-          </li>
-          <li>
-            <p>Street:</p><span> {{ order.street_address1 }}</span>
-          </li>
-          {% if order.street_address2 %}
-          <li>
-            <p>Street:</p><span> {{ order.street_address2 }}</span>
-          </li>
-          {% endif %}
-          <li>
-            <p>Postcode:</p><span> {{ order.postcode }}</span>
-          </li>
-          <li>
-            <p>Town:</p><span> {{ order.town }}</span>
-          </li>
-          <li>
-            <p>Country:</p><span> {{ order.country }}</span>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="order_details_iner">
-        <h3>Order Details</h3>
-        <table class="table table-borderless">
-          <thead>
-            <tr>
-              <th scope="col" colspan="2">Painting</th>
-              <th scope="col">Dimension</th>
-              <th scope="col">Price</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              {% for item in order.lineitems.all %}
-              <th colspan="2">{{ item.product.name }}</th>
-              <th>{{ item.product.size }}</th>
-              <th>€{{ item.product.price }}</th> 
-              {% endfor %}
-            </tr>
-            
-            <tr>
-              <th colspan="3">Subtotal</th>
-              <th>€{{ order.order_total }}</th>
-            </tr>
-            <tr>
-              <th colspan="3">Delivery</th>
-              <th>€{{ order.delivery_cost }}</th>
-            </tr>
-          </tbody>
-          <tfoot>
-            <tr>
-              <th scope="col" colspan="3">Grand Total</th>
-              <th scope="col">€{{ order.grand_total }}</th>
-            </tr>
-          </tfoot>
-        </table>
+      <div class="row">
+        <div class="col-12 col-lg-6 order-lg-last mb-5">
+          <p class="text-muted">
+            <h5>Your Order:</h5>
+          </p>
+          <div class="row">
+            <div class="col-7 offset-2">
+              <p class="mb-1 mt-0 small text-muted">Painting</p>
+            </div>
+            <div class="col-3 text-right">
+              <p class="mb-1 mt-0 small text-muted">Subtotal</p>
+            </div>
+          </div>
+          {% for item in order.lineitems.all %}
+          <div class="row">
+            <div class="col-2 mb-1">
+              <a href="{% url 'product_detail' item.product.id %}">
+                {% if item.product.image %}
+                <img class="w-100" src="{{ item.product.image.url }}" alt="{{ product.name }}">
+                {% else %}
+                <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                {% endif %}
+              </a>
+            </div>
+            <div class="col-7">
+              <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+            </div>
+            <div class="col-3 text-right">
+              <p class="my-0 small text-muted">€{{ item.product.price }}</p>
+            </div>
+          </div>
+          {% endfor %}
+          <hr class="my-0">
+          <div class="row text-black text-right">
+            <div class="col-7 offset-2">
+              <p class="my-0">Order Total:</p>
+              <p class="my-0">Delivery:</p>
+              <p class="my-0">Grand Total:</p>
+            </div>
+            <div class="col-3">
+              <p class="my-0">€{{ order.order_total | floatformat:2 }}</p>
+              <p class="my-0">€{{ order.delivery | floatformat:2 }}</p>
+              <p class="my-0"><strong>€{{ order.grand_total | floatformat:2 }}</strong></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-lg-6">
+          <p class="text-muted">
+            <h5>Delivery Information:</h5>
+          </p>
+          <div class="single_confirmation_details">
+            <ul>
+              <li>
+                <span class="mb-1 mt-0 small text-muted">Name:</span><span> {{ order.full_name }}</span>
+              </li>
+              <li>
+                <span class="mb-1 mt-0 small text-muted">Name:</span><span> {{ order.full_name }}</span>
+              </li>
+              <li>
+                <span class="mb-1 mt-0 small text-muted">Phone Number:</span><span> {{ order.phone_number }}</span>
+              </li>
+              <li>
+                <span class="mb-1 mt-0 small text-muted">Street:</span><span> {{ order.street_address1 }}</span>
+              </li>
+              {% if order.street_address2 %}
+              <li>
+                <span class="mb-1 mt-0 small text-muted">Street:</span><span> {{ order.street_address2 }}</span>
+              </li>
+              {% endif %}
+              <li>
+                <span class="mb-1 mt-0 small text-muted">Postcode:</span><span> {{ order.postcode }}</span>
+              </li>
+              <li>
+                <span class="mb-1 mt-0 small text-muted">Town:</span><span> {{ order.town }}</span>
+              </li>
+              <li>
+                <span class="mb-1 mt-0 small text-muted">Country:</span><span> {{ order.country }}</span>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </section>
 <!--================ confirmation part end =================-->
 
