--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6577,7 +6577,7 @@ input:focus {
 .confirmation_part .single_confirmation_details ul li {
   position: relative;
   text-transform: capitalize;
-  padding-left: 55%;
+  padding-left: 5px;
   margin-bottom: 3px;
 }
 
@@ -6592,7 +6592,9 @@ input:focus {
 
 /* line 41, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_confirmation_part.scss */
 .confirmation_part .single_confirmation_details ul li span {
-  color: #222222;
+  color: #795376;
+  display: inline-block;
+  width: 100px;
 }
 
 /* line 47, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_confirmation_part.scss */
