--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -113,7 +113,7 @@
                     <!-- Used to display form errors -->
                     <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
                     <!-- Pass the client secret to the view so we can get the payment intent id -->
-                    <!-- <input type="hidden" value="{{ client_secret }}" name="client_secret"> -->
+                    <input type="hidden" value="{{ client_secret }}" name="client_secret">
                 </fieldset>
                 <div class="checkout_btn_inner float-right">
                     <a class="btn_1" href="{% url 'view_cart' %}"><span class="icon">
