--- a/static/css/base.css
+++ b/static/css/base.css
@@ -103,3 +103,7 @@ hr {
 .cart_area section_padding {
     padding: 50px 0px;
 }
+
+.allauth-form-inner-content label:not([for='id_remember']) {
+    display: none;
+}
