--- a/static/sass/_menu.scss
+++ b/static/sass/_menu.scss
@@ -260,9 +260,9 @@
 	justify-content: center !important;
 }
 
-@media (max-width: 576px) {
-	.navbar-brand img {
-		max-width: 120px;
-		margin: 50px 0 0 0;
-	}
-}
+// @media (max-width: 576px) {
+// 	.navbar-brand img {
+// 		max-width: 120px;
+// 		margin: 50px 0 0 0;
+// 	}
+// }
