--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,1 +1,35 @@
 {% extends "base.html" %}
+
+{% block content %}
+  <!-- breadcrumb part start-->
+  <section class="breadcrumb_part">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="breadcrumb_iner">
+                    <h2>My Profile</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- breadcrumb part end-->
+<!--================login_part Area =================-->
+<section class="login_part section_padding">
+    <div class="container">
+        <div class="row align-items-center">            
+            <div class="col-lg-8 col-md-8">
+                <div class="login_part_form">
+                    <div class="login_part_form_iner">
+
+                        {% block inner_content %}
+                        {% endblock %}
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--================login_part end =================-->
+{% endblock %}
