--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -5,9 +5,9 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 
-<h1>{% trans "Sign In" %}</h1>
+<h3>{% trans "Sign In" %}</h3>
 
 {% get_providers as socialaccount_providers %}
 
@@ -35,12 +35,14 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form|crispy }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  <button class="primaryAction btn_3" type="submit">{% trans "Sign In" %}</button>
+  <a class="btn_3" href="{% url 'home' %}">Home</a>
+  <a class="lost_pass" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+  
 </form>
 
 {% endblock %}
