--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -87,12 +87,15 @@
           <div class="single_confirmation_details">
             <ul>
               <li>
-                <span class="mb-1 mt-0 small text-muted">Order Number:</span><span> {{ order.order_number }}</span>
+                <span class="mb-1 mt-0 small text-muted">Order Number:</span><span> {{ order.order_number|truncatechars:6 }}</span>
               </li>
               <li>
                 <span class="mb-1 mt-0 small text-muted">Order Date:</span><span> {{ order.date }}</span>
               </li>
               <hr>
+              <li>
+                <span class="mb-1 mt-0 small text-muted">Name:</span><span> {{ order.full_name }}</span>
+              </li>
               <li>
                 <span class="mb-1 mt-0 small text-muted">Phone Number:</span><span> {{ order.phone_number }}</span>
               </li>
@@ -114,9 +117,18 @@
                 <span class="mb-1 mt-0 small text-muted">Country:</span><span> {{ order.country }}</span>
               </li>
             </ul>
+
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      {% if from_profile %}
+      <a class="btn_1" href="{% url 'profile' %}">Back to Profile</a>
+      {% else %}
+      <a class="btn_1" href="{% url 'products' %}">Back to the Art Gallery</a>
     </div>
   </div>
 </section>
