--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -44,7 +44,39 @@
                 <p class="text-muted">
                     <h5 id="h5-padding">Order History:</h5>
                 </p>
-                {{ orders }}
+                <div class="order-history table-responsive">
+                    <table class="table table-sm table-borderless">
+                        <thead>
+                            <tr>
+                            <th>Order Number</th>
+                            <th>Date</th>
+                            <th>Painting</th>
+                            <th>Order Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for order in orders %}
+                            <tr>
+                                <td><a href="{% url 'order_history' order.order_number %}" 
+                                    title="{{ order.order_number }}">{{ order.order_number|truncatechars:6 }}</a></td>
+                                <td>{{ order.date }}</td>
+                                <td>
+                                    <ul class="list-unstyled">
+                                        {% for item in order.lineitems.all %}
+                                        <li class="small">
+                                            <img class="w-50" src="{{ item.product.image.url }}" alt="{{ product.name }}"> 
+                                            <p class="my-0">{{ item.product.name }}</p>
+                                            <p class="my-0">{{ item.product.size }}</p>
+                                        </li>
+                                        {% endfor %}
+                                    </ul>
+                                </td>
+                                <td>{{ order.grand_total}}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
