--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,7 +1,7 @@
 <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center">
 
     <!-- Then put toasts within -->
-    <div class="toast hide" role="alert" aria-live="assertive" aria-atomic="true" data-delay="10000">
+    <div class="toast hide text-warning" role="alert" aria-live="assertive" aria-atomic="true" data-delay="10000">
       <div class="toast-header">
         <i class="fa-solid fa-triangle-exclamation"> </i>
         <strong class="mr-auto">Warning!</strong>
