--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -90,7 +90,7 @@
                 <div class="col-6">
                     <div class="footer_menu">
                         <div class="footer_logo">
-                            <a href="{% url 'home' %}"><img src="{% static 'img/logo.png' %}" alt="#"></a>
+                            <a href="{% url 'home' %}"><img src="https://hanneles-art-gallery.s3.eu-north-1.amazonaws.com/media/logo.png" alt="#"></a>
                         </div>
                         
                     </div>
