--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                     <a class="navbar-brand" href="{% url 'home' %}">
-                        <img src="{% static '/img/logo.png' %}" alt="logo">
+                        <img src="https://hanneles-art-gallery.s3.eu-north-1.amazonaws.com/media/logo.png" alt="logo">
                     </a>
                     <div class="collapse navbar-collapse main-menu-item" id="navbarNavDropdown">
                         <ul class="navbar-nav">
