--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,35 +1,91 @@
 /* Bootstrap 4 Navbar */
+.dropdown-toggle.active-dropdown::after {
+    transform: rotate(-90deg);
+}
+
 
 i {
     color: #795376 !important;
 }
 
-a {
-    color: #795376 !important;
+/* Navigation bar */
+.navbar {
+    box-shadow: none;
 }
-
-a:hover {
-    color: #B08EAD !important;
+.navbar-light .navbar-brand {
+    color: #795376;
+    font-weight: 400;
+    line-height: 0.7;
+    padding-left: 50px;
 }
-
-/* fixed top navbar only on medium and up */
-@media (min-width: 992px) {
-    .fixed-top-desktop-only {
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 0;
-        z-index: 1030;
-    }
-
-    .header-container {
-        padding-top: 164px;
-    }
+.navbar-toggler {
+    font-size: 1.5rem;
 }
-
 .logo-font {
     color: #795376;
     font-size: 1rem;
+}
+.logo-text {
+    text-transform: uppercase;
+    color: #795376;
+    font-size: 2rem;
+    letter-spacing: -0.1rem;
+}
+.logo-subtext {
+    letter-spacing: normal;
+    font-size: 1.3rem;
+}
+
+/* Search form */
+.search-container {
+    width: 50%;
+    min-width: 250px;
+    max-width: 300px;
+    height: 50px;
+    text-align: center;
+}
+.search-input {
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 25px;
+    font-size: 1rem;
+    padding: 8px 40px 8px 20px;
+    border: none;
+}
+.search-input:focus {
+    outline: none;
+}
+.search-form {
+    background: #fff;
+    border-radius: 25px;
+    position: relative;
+}
+.search-button {
+    position: absolute !important;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 100%;
+    border-radius: 50%;
+    cursor: pointer;
+    border: none;
+    background: none;
+    font-size: 18px;
+}
+.search-button:hover {
+    color: #B08EAD;
+}
+
+.search-input[type="text"]::placeholder {
+    color: #B08EAD;
+}
+
+
+@media (max-width: 768px) {
+    .navbar-brand {
+        display: none;
+    }
 }
 
 /* pad the top a bit when navbar is collapsed on mobile */
@@ -44,20 +100,6 @@ a:hover {
 
     .display-4.logo-font.text-black {
         font-size: 2rem;
-    }
-
-    .nav-link {
-        padding: 0.15rem;
-        align-content: left;
-    }
-
-    .nav-link i.fa-lg {
-        font-size: 1rem;
-    }
-
-    .navbar-toggler {
-        padding: .6rem .6rem;
-        font-size: 1rem;
     }
 
 /* 
